--- a/static/css/main.css
+++ b/static/css/main.css
@@ -6,6 +6,9 @@
   font-size: 1.3rem;
   font-style: italic;
 }
+.apilos-text-info {
+  color: var(--text-default-info);
+}
 .apilos-mobile-header {
   height: 50px;
   width: 50px;
@@ -79,6 +82,22 @@
     top: calc(50% - 35px);
     background-color: white;
   }
+}
+.fr-select:has(option[selected]) {
+  border: solid 1px var(--text-default-info);
+}
+.search-select:has(.fr-select option[selected]) .select-label::after {
+  content: "";
+  -webkit-mask-image: url("../../static/dsfr/icons/system/fr--success-fill.svg");
+  mask-image: url("../../static/dsfr/icons/system/fr--success-fill.svg");
+  --icon-size: 1.2rem;
+  background-color: var(--background-active-blue-france);
+  height: var(--icon-size);
+  width: var(--icon-size);
+  display: inline-block;
+  -webkit-mask-size: 100% 100%;
+  mask-size: 100% 100%;
+  margin-left: 0.5rem;
 }
 .h-100 {
   height: 100%;
