--- a/templates/conventions/calculette_loyer.html
+++ b/templates/conventions/calculette_loyer.html
@@ -10,7 +10,9 @@
     <div class="fr-container-fluid ds_banner fr-mb-8w">
         {# Main title & optionnal CTAs #}
         <div class="fr-container">{% include "./_partial/search_header.html" %}</div>
-        {% include "./_partial/tabs.html" %}
+        {% if not new_search %}
+            {% include "./_partial/tabs.html" %}
+        {% endif %}
     </div>
 
     {# Page's actual inner content #}
