--- a/templates/conventions/convention_list.html
+++ b/templates/conventions/convention_list.html
@@ -1,173 +1,6 @@
 {% load custom_filters %}
 {% load display_filters %}
 
-{% if url_name != "operation_conventions" %}
-    <div class="fr-container">
-        <div class="fr-grid-row fr-grid-row--gutters">
-            <div class="fr-col-md-12 fr-mb-2w">
-                <form class="fr-mt-2w" method="get" action="" id="search_table">
-                    <input type="hidden" id="order_by" name="order_by" value="{{ order_by }}">
-                    <input type="hidden" id="page" name="page" value="{{ page }}">
-                    {# Champs de recherche spécifiques (dépend du rôle de l'utilisateur) #}
-                    <div class="fr-grid-row fr-grid-row--gutters">
-                        {# Champs bailleur #}
-                        {% if bailleur_query %}
-                            <div class="fr-col-12 fr-col-md-12 fr-col-lg-3 fr-mb-2w">
-                                <div class="">
-                                    {% url 'users:search_bailleur' as search_bailleur_url %}
-                                    <select class="fr-select" name="bailleur" id="search-field-bailleur">
-                                        {% if request.GET.bailleur %}
-                                            <option selected value="{{ request.GET.bailleur }}">{% bailleur_from request.GET.bailleur %}</option>
-                                            {% endwith }
-                                        {% else %}
-                                            <option selected value>Bailleur</option>
-                                            {% for bailleur in bailleur_query %}
-                                                <option value="{{ bailleur.uuid }}">
-                                                    {{ bailleur }}
-                                                </option>
-                                            {% endfor %}
-                                        {% endif %}
-                                    </select>
-                                </div>
-                                <script type="text/javascript" nonce="{{request.csp_nonce}}">
-                                    VirtualSelect.init({
-                                        ele: '#search-field-bailleur',
-                                        search: true,
-                                        placeholder: "Bailleur",
-                                        selectedValue: null,
-                                        searchPlaceholderText: "Nom du bailleur ( SIREN )",
-                                        onServerSearch: function (search, select) {
-                                            fetch('{{ search_bailleur_url }}?q=' + search)
-                                                .then((response) => response.json())
-                                                .then(data => select.setServerOptions(data));
-                                        },
-                                    });
-                                </script>
-                            </div>
-                        {% endif %}
-
-                        {# Champs administration #}
-                        {% if administration_query %}
-                            <div class="fr-col-12 fr-col-md-12 fr-col-lg-3">
-                                <div class="">
-                                    {% url 'users:search_administration' as search_administration_url %}
-                                    <select class="fr-select" name="administration" id="search-field-administration">
-                                        {% if request.GET.administration %}
-                                            <option selected value="{{ request.GET.administration }}">{% administration_from request.GET.administration %}</option>
-                                        {% else %}
-                                            <option selected value>Instructeur</option>
-                                            {% for administration in administration_query %}
-                                                <option value="{{ administration.uuid }}">
-                                                    {{ administration }}
-                                                </option>
-                                            {% endfor %}
-                                        {% endif %}
-                                    </select>
-                                    <script type="text/javascript" nonce="{{request.csp_nonce}}">
-                                        VirtualSelect.init({
-                                            ele: '#search-field-administration',
-                                            search: true,
-                                            placeholder: "Instructeur",
-                                            selectedValue: null,
-                                            searchPlaceholderText: "Nom du l'administration'",
-                                            onServerSearch: function (search, select) {
-                                                fetch('{{ search_administration_url }}?q=' + search)
-                                                    .then((response) => response.json())
-                                                    .then(data => select.setServerOptions(data));
-                                            },
-                                        });
-                                    </script>
-                                </div>
-                            </div>
-                        {% endif %}
-
-                        {# Champs commune #}
-                        <div class="fr-col-12 fr-col-md-12 fr-col-lg-3">
-                            <input class="fr-input" placeholder="Commune" type="text" name="ville" value="{{ request.GET.ville }}" />
-                        </div>
-
-                        {# Champs de recherche génériques (affichés à tous les utilisateurs) #}
-                        {# Champs Statut #}
-                        <div class="fr-col-12 fr-col-md-12 fr-col-lg-3 fr-mb-2w">
-                            <div class="">
-                                <select class="fr-select" id="cstatut" name="cstatut">
-                                    <option value="">Statut</option>
-                                    {% for value, label in statuts %}
-                                        <option value="{{ label }}"
-                                            {% if label == request.GET.cstatut %}selected{% endif %}>
-                                            {{ label }}
-                                        </option>
-                                    {% endfor %}
-                                </select>
-                            </div>
-                        </div>
-                        {# Champs financement #}
-                        <div class="fr-col-12 fr-col-md-12 fr-col-lg-3 fr-mb-2w">
-                            <div class="">
-                                <select class="fr-select" name="financement">
-                                    <option value="">Financement</option>
-                                    {% for value, label in financements %}
-                                        <option value="{{ label }}"
-                                            {% if value == request.GET.financement %}selected{% endif %}>
-                                            {{ label }}
-                                        </option>
-                                    {% endfor %}
-                                </select>
-                            </div>
-                        </div>
-
-                        {# Champs annee de signature #}
-                        {% if date_signature_choices %}
-                            <div class="fr-col-12 fr-col-md-12 fr-col-lg-3 fr-mb-2w">
-                                <div class="">
-                                    <select class="fr-select" name="date_signature">
-                                        <option value="">Année de signature</option>
-                                        {% for value in date_signature_choices %}
-                                            <option value="{{ value }}"
-                                                {% if value == request.GET.date_signature %}selected{% endif %}>
-                                                {{ value }}
-                                            </option>
-                                        {% endfor %}
-                                    </select>
-                                </div>
-                            </div>
-                        {% endif %}
-
-                        {# Champs date de signature #}
-
-                        {# Champs "Libre" (code opération / numéro de convention, code postal ou nom du programme) #}
-                        <div class="fr-col-12 fr-col-md-12 fr-col-lg-3 fr-mb-2w">
-                            <input class="fr-input" placeholder="Numéro, nom, code postal…" type="search" id="search_input" name="search_input" value="{{ search_input }}" />
-                        </div>
-
-                        {# Champs ANRU #}
-                        <div class="fr-col-12 fr-col-md-12 fr-col-lg-3 fr-mb-2w">
-                            <div class="fr-fieldset__element">
-                                <div class="fr-checkbox-group fr-checkbox-group--sm">
-                                    <input name="anru" id="checkbox-restrict-to-anru" type="checkbox" {% if request.GET.anru %}checked{% endif %}>
-                                    <label class="fr-label" for="checkbox-restrict-to-anru">
-                                        ANRU
-                                        <span class="fr-hint-text">N'afficher que les conventions ANRU</span>
-                                    </label>
-                                    <div class="fr-messages-group" id="checkboxes-hint-el-sm-3-messages" aria-live="assertive">
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-
-                    <div class="fr-grid-row fr-grid-row--gutters fr-grid-row--right">
-                        <button class="fr-btn" id="search_btn">
-                            <span class="fr-icon-search-line fr-mr-1w" aria-hidden="true"></span>
-                            Rechercher
-                        </button>
-                    </div>
-
-                </form>
-            </div>
-        </div>
-    </div>
-{% endif %}
 <div class="fr-container-fluid ds_banner">
     <div class="fr-container fr-px-3w fr-mb-3w">
         <div class="fr-grid-row fr-grid-row--gutters fr-card fr-card--no-border">
@@ -195,7 +28,18 @@
                     <div class="fr-table fr-table--bordered table--layout-fixed">
                         <table aria-label="Conventions">
                             {% if filtered_conventions_count != all_conventions_count %}
-                                <caption><em>{{ filtered_conventions_count }} convention{{ all_conventions_count|pluralize }} correspond{{ filtered_conventions_count|pluralize:'ent' }} à votre recherche</em></caption>
+                                <div class="fr-grid-row fr-grid-row--gutters fr-grid-row--middle fr-mb-2w">
+                                    <div class="fr-grid-row fr-col-12">
+
+                                        <div class="fr-mr-2w notes">{{ filtered_conventions_count }} résultats</div>
+                                        {% if new_search %}
+                                            <a href="/" class="fr-link">
+                                                <span class="fr-icon-close-circle-line fr-mr-1w"></span>
+                                                Réinitaliser la recherche
+                                            </a>
+                                        {% endif %}
+                                    </div>
+                                </div>
                             {% endif %}
                             <thead>
                                 <tr class="th_inline">
@@ -304,7 +148,28 @@
                     {% include 'common/table/pagination.html' with paginate_list=conventions %}
 
                 {% else %}
-                    <p>Aucune convention ne correspond à votre recherche...</p>
+                    <div class="fr-grid-row fr-grid-row--gutters fr-grid-row--middle">
+                        <div class="fr-mr-2w notes fr-col-2">Aucun résultat</div>
+                        <a href="/" class="fr-link">
+                            <span class="fr-icon-close-circle-line fr-mr-1w"></span>
+                            Réinitaliser la recherche
+                        </a>
+                        {% if new_search %}
+                            <a href="{% url 'conventions:loyer_simulateur' %}" class="fr-link fr-ml-2w"
+                                title="Calculatrice de loyers"
+                                aria-selected="{% if request.resolver_match.view_name == "conventions:loyer_simulateur" %}true{% else %}false{% endif %}"                                >
+                                <span aria-hidden="true" class="fr-icon-equalizer-fill"></span>
+                                Calculatrice de loyers
+                            </a>
+                        {% endif %}
+                    </div>
+                    <div class="fr-grid-row fr-grid-row--gutters fr-grid-row--middle">
+                        <div class="fr-col-9">
+                            <div class="fr-text--lg">Aucune convention ne correspond à votre recherche</div>
+                            <div>Si vous avez recherché par numéro ou mots-clés, vérifiez qu’ils sont corrects.<br/>Sinon peut-être que la convention que vous recherchez n’est pas référencée dans le SIAP / Apilos. </div>
+                        </div>
+                        <img class="fr-mr-3w" src="/static/icons/not_found.png" alt="not_found">
+                    </div>
                 {% endif %}
             </div>
         </div>
