--- a/templates/conventions/calculette_loyer.html
+++ b/templates/conventions/calculette_loyer.html
@@ -42,6 +42,10 @@
                             <div class="fr-col-12 fr-col-md-12 fr-col-lg-6 fr-mb-2w">
                                 {% include "common/form/input_date.html" with form_input=form.date_actualisation editable=True %}
                             </div>
+
+                            <div class="fr-col-12 fr-col-md-12 fr-col-lg-6 fr-mb-2w">
+                                {% include "common/form/input_select.html" with form_input=form.departement editable=True %}
+                            </div>
                         </div>
                     </div>
 
