--- a/templates/conventions/convention_list.html
+++ b/templates/conventions/convention_list.html
@@ -44,9 +44,9 @@
                             <thead>
                                 <tr class="th_inline">
 
-                                    {% if debug_search_ranking %}
-                                        <th title="Ranking" scope="col">
-                                            >> Debug ranking >>>>>>>>>>
+                                    {% if debug_search_scoring %}
+                                        <th title="Scoring" scope="col">
+                                            >> Debug scoring >>>>>>>>>>>>>>
                                         </th>
                                     {% endif %}
 
@@ -86,39 +86,26 @@
                                 {% for convention in conventions %}
                                     <tr id="convention_redirect_{{convention.uuid}}" class="clickable {% if convention|display_redirect_project and not convention.is_avenant %}project{% elif convention|display_redirect_sent %}sent{% elif convention|display_redirect_post_action and not convention.is_avenant %}signed{% endif %}">
 
-                                        {% if debug_search_ranking %}
+                                        {% if debug_search_scoring %}
                                             <td>
-                                                {{ settings.TRIGRAM_SIMILARITY_THRESHOLD }}
-                                                {% if convention.rank %}
-                                                    <div>
-                                                        rank: {{ convention.rank }}
-                                                    </div>
-                                                {% endif %}
-                                                {% if convention.search_vector_programme_rank %}
-                                                    <div>
-                                                        vector programme: {{ convention.search_vector_programme_rank }}
-                                                    </div>
-                                                {% endif %}
-                                                {% if convention.search_vector_bailleur_rank %}
-                                                    <div>
-                                                        vector bailleur: {{ convention.search_vector_bailleur_rank }}
-                                                    </div>
-                                                {% endif %}
-                                                {% if convention.numero_similarity and convention.numero_similarity > TRIGRAM_SIMILARITY_THRESHOLD %}
-                                                    <div>
-                                                        conv numero trgm: {{ convention.numero_similarity }}
-                                                    </div>
-                                                {% endif %}
-                                                {% if convention.programme_ville_similarity and convention.programme_ville_similarity > TRIGRAM_SIMILARITY_THRESHOLD %}
-                                                    <div>
-                                                        programme ville trgm: {{ convention.programme_ville_similarity }}
-                                                    </div>
-                                                {% endif %}
-                                                {% if convention.numero_operation_similarity and convention.numero_operation_similarity > TRIGRAM_SIMILARITY_THRESHOLD %}
-                                                    <div>
-                                                        programme numero trgm: {{ convention.numero_operation_similarity }}
-                                                    </div>
-                                                {% endif %}
+                                                <div>
+                                                    vector programme: {{ convention.vector_programme_score }}
+                                                </div>
+                                                <div>
+                                                    vector bailleur: {{ convention.vector_bailleur_score }}
+                                                </div>
+                                                <div>
+                                                    programme ville trgm: {{ convention.trgm_programme_ville_score }}
+                                                </div>
+                                                <div>
+                                                    programme numero trgm: {{ convention.trgm_programme_numero_score }}
+                                                </div>
+                                                <div>
+                                                    conv numero trgm: {{ convention.trgm_conv_numero_score }}
+                                                </div>
+                                                <div>
+                                                    bailleur siret trgm: {{ convention.trgm_bailleur_siret_score }}
+                                                </div>
                                             </td>
                                         {% endif %}
 
