--- a/templates/conventions/recapitulatif/bailleur.html
+++ b/templates/conventions/recapitulatif/bailleur.html
@@ -33,10 +33,17 @@
             <div class="fr-col-12 fr-col-lg-6">
                 <p class="fr-my-1w"><strong>Signataire de la convention</strong>{% if convention.programme.is_foyer or convention.programme.is_residence %} (Propriétaire){% endif %}</p>
                 <div class="fr-ml-3w">
-                    {% include "common/display_field_if_exists.html" with value=convention.signataire_nom object_field="bailleur__signataire_nom__"|add:bailleur_uuid %}
-                    <em>{% include "common/display_field_if_exists.html" with value=convention.signataire_fonction object_field="bailleur__signataire_fonction__"|add:bailleur_uuid %}</em>
-                    {% include "common/display_field_if_exists.html" with label="Date de délibération" value=convention.signataire_date_deliberation object_field="bailleur__signataire_date_deliberation__"|add:bailleur_uuid %}
-                    {% include "common/display_field_if_exists.html" with value=convention.signataire_bloc_signature object_field="bailleur__signataire_bloc_signature__"|add:bailleur_uuid %}
+                    {% if bailleur.signataire_nom %}
+                        {% include "common/display_field_if_exists.html" with value=bailleur.signataire_nom object_field="bailleur__signataire_nom__"|add:bailleur_uuid %}
+                        <em>{% include "common/display_field_if_exists.html" with value=bailleur.signataire_fonction object_field="bailleur__signataire_fonction__"|add:bailleur_uuid %}</em>
+                        {% include "common/display_field_if_exists.html" with label="Date de délibération" value=bailleur.signataire_date_deliberation object_field="bailleur__signataire_date_deliberation__"|add:bailleur_uuid %}
+                        {% include "common/display_field_if_exists.html" with value=bailleur.signataire_bloc_signature object_field="bailleur__signataire_bloc_signature__"|add:bailleur_uuid %}
+                    {% else %}
+                        {% include "common/display_field_if_exists.html" with value=convention.signataire_nom object_field="bailleur__signataire_nom__"|add:bailleur_uuid %}
+                        <em>{% include "common/display_field_if_exists.html" with value=convention.signataire_fonction object_field="bailleur__signataire_fonction__"|add:bailleur_uuid %}</em>
+                        {% include "common/display_field_if_exists.html" with label="Date de délibération" value=convention.signataire_date_deliberation object_field="bailleur__signataire_date_deliberation__"|add:bailleur_uuid %}
+                        {% include "common/display_field_if_exists.html" with value=convention.signataire_bloc_signature object_field="bailleur__signataire_bloc_signature__"|add:bailleur_uuid %}
+                    {% endif %}
                 </div>
             </div>
         </div>
