--- a/templates/conventions/convention_list_filters_new.html
+++ b/templates/conventions/convention_list_filters_new.html
@@ -108,7 +108,7 @@
                             <div class="fr-checkbox-group fr-checkbox-group--sm">
                                 <input name="avenant_seulement" id="checkbox-restrict-to-with-avenant" type="checkbox" {% if request.GET.avenant_seulement %}checked{% endif %}>
                                 <label class="fr-label" for="checkbox-restrict-to-with-avenant">
-                                    Afficher uniquement les conventions avec avenant
+                                    Afficher uniquement les avenants
                                 </label>
                             </div>
                         </div>
