--- a/templates/conventions/convention_list_filters_new.html
+++ b/templates/conventions/convention_list_filters_new.html
@@ -52,7 +52,7 @@
                             multiple: true,
                             placeholder: "Selectionner une option",
                             optionsSelectedText: "options sélectionnées",
-                            allOptionsSelectedText: "Touts les options",
+                            allOptionsSelectedText: "Toutes les options",
                             selectAllText: "Tout sélectionner",
                         });
                     </script>
