Fix - critères de recherche et liste des résultats (#1225)

--- a/templates/conventions/convention_list_filters_new.html
+++ b/templates/conventions/convention_list_filters_new.html
@@ -49,7 +49,11 @@
                             ele: '#cstatut',
                             optionsCount: 5,
                             search: false,
-                            multiple: true
+                            multiple: true,
+                            placeholder: "Selectionner une option",
+                            optionsSelectedText: "options sélectionnées",
+                            allOptionsSelectedText: "Toutes les options",
+                            selectAllText: "Tout sélectionner",
                         });
                     </script>
 
