--- a/templates/settings/common/side_menu.html
+++ b/templates/settings/common/side_menu.html
@@ -13,11 +13,22 @@
                             <a class="fr-sidemenu__link" href="{% url 'settings:edit_administration' administration_uuid=request|current_administration %}" target="_self" {% if active_menu == 'administrations' %}aria-current="page"{% endif %}>Votre administration</a>
                         </li>
                     {% endif %}
+
                     {% if request|current_bailleur %}
                         <li class="fr-sidemenu__item{% if active_menu == 'bailleurs' %} fr-sidemenu__item--active{% endif %}">
                             <a class="fr-sidemenu__link" href="{% url 'settings:edit_bailleur' bailleur_uuid=request|current_bailleur %}" target="_self" {% if active_menu == 'bailleurs' %}aria-current="page"{% endif %}>Votre entité bailleur</a>
                         </li>
                     {% endif %}
+
+                    {% if request.user.is_superuser or request.user.is_staff %}
+                        <li class="fr-sidemenu__item{% if active_menu == 'bailleurs' %} fr-sidemenu__item--active{% endif %}">
+                            <a class="fr-sidemenu__link" href="{% url 'settings:bailleurs' %}" target="_self" {% if active_menu == 'bailleurs' %}aria-current="page"{% endif %}>Bailleurs</a>
+                        </li>
+                        <li class="fr-sidemenu__item{% if active_menu == 'administrations' %} fr-sidemenu__item--active{% endif %}">
+                            <a class="fr-sidemenu__link" href="{% url 'settings:administrations' %}" target="_self" {% if active_menu == 'administrations' %}aria-current="page"{% endif %}>Administrations</a>
+                        </li>
+                    {% endif %}
+
                 {% else %}
                     <li class="fr-sidemenu__item{% if active_menu == 'profile' %} fr-sidemenu__item--active{% endif %}">
                         <a class="fr-sidemenu__link" href="{% url 'settings:profile' %}" target="_self" {% if active_menu == 'profile' %}aria-current="page"{% endif %}>Votre profil</a>
