--- a/templates/conventions/recapitulatif/bailleur.html
+++ b/templates/conventions/recapitulatif/bailleur.html
@@ -50,18 +50,17 @@
     {% endwith %}
     {% if convention.programme.is_foyer or convention.programme.is_residence %}
         {% if convention.gestionnaire %}
-            <div class="block--row-strech-1">
-
+            <div class="block--row-strech-1 fr-mt-4w">
                 <h4 class="fr-card__title">
                     Gestionnaire
                 </h4>
             </div>
-
             <div class="fr-grid-row fr-grid-row--gutters">
                 <div class="fr-col-12 fr-col-lg-6">
                     <div class="fr-mb-2w">
                         <strong>{% include "common/display_field_if_exists.html" with value=convention.gestionnaire object_field="convention__gestionnaire__"|add:convention_uuid %}</strong>
-                        {% include "common/display_field_if_exists.html" with value=convention.gestionnaire_bloc_info_complementaire object_field="convention__gestionnaire_bloc_info_complementaire__"|add:convention_uuid %}
+
+                        {% include "common/display_field_if_exists.html" with label="Informations complémentaires sur le gestionnaire" value=convention.gestionnaire_bloc_info_complementaire object_field="convention__gestionnaire_bloc_info_complementaire__"|add:convention_uuid %}
                     </div>
                 </div>
                 <div class="fr-col-12 fr-col-lg-6">
