S975 infos bailleur et gestionnaire conventions (#1211)
* update: fix recap + template pour intégrer le signataire du bailleur quand il n'y en a pas au niveau de la convention

* update: add new champ "information complementaire

* update: add js previzualisation

* update: improve recap integration

* Update conventions/forms/convention_form_bailleur.py

Co-authored-by: Sylvain Delabye <syl.delabye@gmail.com>

---------

Co-authored-by: Sylvain Delabye <syl.delabye@gmail.com>

--- a/templates/conventions/_bailleur_signataire.html
+++ b/templates/conventions/_bailleur_signataire.html
@@ -41,7 +41,18 @@
                         </div>
                     </div>
                 </div>
+                {% include "common/form/input_text.html" with form_input=form.gestionnaire_bloc_info_complementaire object_field="convention__gestionnaire_bloc_info_complementaire__"|add:convention_uuid %}
             {% endwith %}
+
+            <div class="fr-col-12">
+                <label><em>Prévisualisation des éléments complémentaires</em></label>
+                <div class="fr-card fr-card--no-arrow">
+                    <div class="fr-card__body fr-my-2w">
+                        <div> [...] en date du <span class="apilos-insert-date-deliberation"></span>, <span class="apilos-insert-info-complementaire"></span> dénommé ci-après le gestionnaire, et agissant à ce titre en application de la convention de location conclue avec le propriétaire ;
+                        </div>
+                    </div>
+                </div>
+            </div>
         {% endif %}
     </div>
     {% include "common/required_fields_info.html" %}
